--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,3 +6,16 @@ body {
 a {
   color: #00B7FF;
 }
+
+.p-padding {
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+.box-outline {
+  margin:4px;
+  border:1px;
+  border-radius: 2px;
+  border-style: solid;
+  border-color: lightgray;
+}
