--- a/views/ytinifni2core.ejs
+++ b/views/ytinifni2core.ejs
@@ -1,1 +1,4 @@
-<pre><%= content %></pre>
+<div class="row clearfix">
+  <div class="col-lg-12">Number of titles: <%= content.result.n %></div>
+</div>
+<pre><%= JSON.stringify(content.ops,null,4) %></pre>
