--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,5 +7,10 @@
     <link rel='stylesheet' href='/css/style.css' />
   </head>
   <body>
+    <script src='/js/react.js'></script>
+    <script src='/js/react-dom.js'></script>
+    <script src='/js/react-with-addons.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.28.3/react-bootstrap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
     <script src='/js/jquery-2.2.0.min.js'></script>
     <script src='/js/bootstrap.min.js'></script>
